# mindflow

./: Dockerfile  README.md  app.py  pyproject.toml  test_scraper.py
alembic/versions/: 3265fad2cf9e_chunks_table_added.py  3dfe68063d8c_add_chunks_table.py  6c674b9861b9_items_table.py
app/: main.py
app/core/: config.py  logger.py
app/llm/: __init__.py  client.py  langgraph.py
app/llm/prompts/: action_v1.txt  answer_v1.txt  decider_v1.txt  digest_v1.txt
app/models/: __init__.py  item.py
app/routes/: __init__.py  agent_route.py  ingest_route.py  query_route.py  query_routes.py
app/schemas/: __init__.py  item.py  llm_schemas.py
app/services/: __init__.py  action_service.py  audio_service.py  cache_service.py  digest_service.py  embedding_service.py  pdf_service.py  rag_service.py  save_db.py  scraper_service.py  search_service.py
tests/: conftest.py  test_agent.py  test_ask.py  test_ask_guardrail.py  test_health.py  test_ingest.py  test_search.py
