[project]
name = "fastapi-template"
version = "0.1.0"
description = "Production-ready FastAPI template with SQLAlchemy, Alembic, and structured logging"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "fastapi>=0.136.1",
    "faster-whisper>=1.2.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-mistralai>=1.1.4",
    "openai-whisper>=20250625",
    "pgvector>=0.4.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
