[project]
name = "mindflow"
version = "0.1.0"
description = "Personal Second Brain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "cohere>=7.0.0",
    "fastapi>=0.136.1",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.4",
    "langchain-text-splitters>=1.1.2",
    "pgvector>=0.4.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.29",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.58.0",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow as they hit DB or external APIs",
]
